commit 0c4d8542f90995feb17112c77d679c945b14f234
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Apr 22 15:49:15 2013 +0400

    new changes

commit c9f9c76894f17ba868fba2729e10f7868e6f5f3e
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Fri Apr 19 18:12:04 2013 +0400

    add changes

commit 45d6eb7db02315e441931892e3f2173989a28621
Author: vrovachev <vrovachev@mirantis.com>
Date:   Fri Apr 19 14:09:47 2013 +0400

    add new changes

commit 5935ed7b638da10a48ab2e1fce6ff9dda5001986
Author: vrovachev <vrovachev@mirantis.com>
Date:   Fri Apr 19 14:04:08 2013 +0400

    add new changes

commit cc5cd7e119067c1532de4be60a394523f475d94f
Author: vrovachev <vrovachev@mirantis.com>
Date:   Mon Apr 1 14:16:19 2013 +0400

    add changes in stackforge repo

commit 610bd284e62a86829cd1b8d368334601ffafc175
Author: vrovachev <vrovachev@mirantis.com>
Date:   Fri Mar 29 16:07:24 2013 +0400

    change branch for last built in stackforge

commit 0c068d5ff1aacbf44be28fc8094a3a6b26330b2e
Author: vrovachev <vrovachev@mirantis.com>
Date:   Fri Mar 29 15:57:48 2013 +0400

    refactoring testcode

commit 093b5d9e653c0194cdae877239c6da90379db201
Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
Date:   Fri Mar 29 15:55:47 2013 +0400

    add tests for cluster deletion and get cluster

commit 6330f7a3260d1fd8fbe01c6a0bfe3ab523bde561
Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
Date:   Thu Mar 28 20:53:05 2013 +0400

    add negative tests for cluster

commit b678bee75ba444b375a77556814bc3238cdbab9b
Merge: f2e9c6e 3852ebb
Author: vrovachev <vrovachev@mirantis.com>
Date:   Thu Mar 28 20:37:22 2013 +0400

    Merge branch 'QA' of https://github.com/Mirantis/savanna into QA

commit f2e9c6ef0510ab77caa63d7b3d260c72cca404b4
Author: vrovachev <vrovachev@mirantis.com>
Date:   Thu Mar 28 20:37:13 2013 +0400

    add unit tests

commit 3852ebb484e956cd613b41ecd18f6ec76f6298cc
Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>