@@ -4,4 +4,5 @@ Dmitry Mescheryakov <dmescheryakov@mirantis.com>
 LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
 Sergey Lukjanov <slukjanov@mirantis.com>
 Vadim Rovachev <vrovachev@mirantis.com>
+vadim <vadim@vrovachev.(none)>
 vrovachev <vrovachev@mirantis.com>
